--- a/eventix/eventix/frontend/public/index.html
+++ b/eventix/eventix/frontend/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Eventix - Your gateway to the universe of unforgettable events"
     />
-    <title>EVENTIX - Event Management System</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='75' font-size='75'>⚡</text></svg>" />
+    <title>EVENTIX</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
